--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,14 +14,17 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Build the Docker image, test and deploy
+      - name: Install Hub
         if: github.ref == 'refs/heads/master'
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: |
-          sudo snap install hub --classic
+          sudo snap hub snap install hub --classic
           hub --help
+      - name: Clone STACH SDK GitHUb repository
+        if: github.ref == 'refs/heads/master'
+        run: |
+          hub clone https://github.com/saigiridhar21/stachschema-sdks.git
+          ls -latr
+          las -latr /
       - name: Build the Docker image and test
         if: github.ref != 'refs/heads/master'
         run: |
