--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,7 +32,8 @@ jobs:
         if: github.ref == 'refs/heads/master'
         run: |
           ls -latr
-          ls -latr /stachschema-models
+          ls -latr stachschema-models
+          ls -latr stachschema-sdk
       - name: Build the Docker image and test
         if: github.ref != 'refs/heads/master'
         run: |
