--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,7 +32,8 @@ jobs:
       - name: Running docker
         if: github.ref == 'refs/heads/master'
         run: |
-          docker-compose -e STACH_PROTO_PATH=${PWD}/stachschema-models/proto -f stachschema-models/docker-compose.yml  
+          export STACH_PROTO_PATH=${PWD}/stachschema-models/proto
+          docker-compose -f stachschema-models/docker-compose.yml  
       - name: Build the Docker image and test
         if: github.ref != 'refs/heads/master'
         run: |
