--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,7 +32,8 @@ jobs:
       - name: Running docker
         if: github.ref == 'refs/heads/master'
         run: |
-          export STACH_PROTO_PATH=${PWD}/stachschema-models
+          export STACH_MODELS_PATH=${PWD}/stachschema-models/proto
+          export STACH_SDKS_REPO_PATH=${PWD}/stachschema-sdks
           docker-compose -f stachschema-sdks/docker-compose.yml up
       - name: Build the Docker image and test
         if: github.ref != 'refs/heads/master'
