--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,7 +38,8 @@ jobs:
       - name: Raise pull request
         if: github.ref == 'refs/heads/master'
         run: |
-          if git -C stachschema-sdks diff-index --quiet HEAD; then echo "Hai"; else echo "fail"; fi
+          if git -C stachschema-sdks diff-index --quiet HEAD; then echo "No changes to the STACH models"; else echo "Detected changes in STACH models"; export STACH_CHANGES=1; fi
+          cd stachschema-sdks; git status
       - name: Build the Docker image and test
         if: github.ref != 'refs/heads/master'
         run: |
