--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -40,8 +40,9 @@ jobs:
         run: |
           if git -C stachschema-sdks diff-index --quiet HEAD; then echo "No changes to the STACH models"; else echo "Detected changes in STACH models"; export STACH_CHANGES=1; fi
       - name: Master and raise pull request
-        if: github.ref == 'refs/heads/master' && env.STACH_CHANGES == 1
+        if: github.ref == 'refs/heads/master'
         run: |
+          printenv
           echo "Haiii"
           cd stachschema-sdks; git status
       - name: Build the Docker image and test
