--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Raise pull request
         if: github.ref == 'refs/heads/master'
         run: |
-          if git -C stachschema-sdks diff-index --quiet HEAD; then echo "No changes to the STACH models";export STACH_CHANGES=2; else echo "Detected changes in STACH models"; export STACH_CHANGES=1; fi
+          if git -C stachschema-sdks diff-index --quiet HEAD; then echo "No changes to the STACH models";export STACH_CHANGES=2; else echo "Detected changes in STACH models"; export STACH_CHANGES=1;echo "::set-env name=STACH_CHANGES::$STACH_CHANGES"; fi
       - name: Master and raise pull request
         if: github.ref == 'refs/heads/master'
         run: |
