--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -35,10 +35,16 @@ jobs:
           export STACH_MODELS_PATH=${PWD}/stachschema-models/proto
           export STACH_SDKS_REPO_PATH=${PWD}/stachschema-sdks
           docker-compose -f stachschema-sdks/docker-compose.yml up
-      - name: Raise pull request
+      - name: Check for diff
         if: github.ref == 'refs/heads/master'
         run: |
-          if git -C stachschema-sdks diff-index --quiet HEAD; then echo "No changes to the STACH models";export STACH_CHANGES=2; else echo "Detected changes in STACH models"; export STACH_CHANGES=1;echo "::set-env name=STACH_CHANGES::$STACH_CHANGES"; fi
+          if git -C stachschema-sdks diff-index --quiet HEAD; then 
+            echo "No changes to the STACH models"; 
+          else 
+            echo "Detected changes in STACH models";
+            export STACH_CHANGES=1;
+            echo "::set-env name=STACH_CHANGES::$STACH_CHANGES";
+          fi
       - name: Master and raise pull request
         if: github.ref == 'refs/heads/master' && env.STACH_CHANGES == 1
         run: |
