--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -49,8 +49,14 @@ jobs:
         if: github.ref == 'refs/heads/master' && env.STACH_CHANGES == 1
         run: |
           printenv
-          echo "Haiii"
-          cd stachschema-sdks; git status
+          cd stachschema-sdks
+          git checkout -b test_branch
+          git status
+          git add -A .
+          git commit -m "feat(stachschema-sdks): Updating SDKs";
+          git push origin test_branch;
+          hub --help
+          hub pull-request -b test_branch
       - name: Build the Docker image and test
         if: github.ref != 'refs/heads/master'
         run: |
