--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -49,6 +49,8 @@ jobs:
         if: github.ref == 'refs/heads/master' && env.STACH_CHANGES == 1
         run: |
           printenv
+          git config --global user.email "saigiridhar21@gmail.com"
+          git config --global user.name "saigiridhar21"
           cd stachschema-sdks
           git checkout -b test_branch
           git status
