--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -52,8 +52,8 @@ jobs:
           printenv
           git config --global user.email "saigiridhar21@gmail.com"
           git config --global user.name "saigiridhar21"
-          export GITHUB_USER=${{env.GITHUB_ACTOR}}
-          export GITHUB_TOKEN=${{secret.USER_API_KEY}}
+          export GITHUB_USER=${{ env.GITHUB_ACTOR }}
+          export GITHUB_TOKEN=${{ secrets.USER_API_KEY }}
           cd stachschema-sdks
           git checkout -b test_branch
           git status
