--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -50,8 +50,8 @@ jobs:
         if: github.ref == 'refs/heads/master' && env.STACH_CHANGES == 1
         run: |
           printenv
-          git config --global user.email "saigiridhar21@gmail.com"
-          git config --global user.name "saigiridhar21"
+          #git config --global user.email "saigiridhar21@gmail.com"
+          #git config --global user.name "saigiridhar21"
           export GITHUB_USER=${{ env.GITHUB_ACTOR }}
           export GITHUB_TOKEN=${{ secrets.USER_API_KEY }}
           cd stachschema-sdks
