--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -51,7 +51,7 @@ jobs:
         run: |
           printenv
           git config --global user.email "saigiridhar21@gmail.com"
-          git config --global user.name ${{ env.GITHUB_ACTOR }}
+          git config --global user.name "saigiridhar21"
           export GITHUB_USER=${{ env.GITHUB_ACTOR }}
           export GITHUB_TOKEN=${{ secrets.USER_API_KEY }}
           cd stachschema-sdks
