--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,7 +28,8 @@ jobs:
           ref: master
       - name: Check whether models were changed in last commit
         run: |
-          git -C stachschema-models diff --name-only HEAD HEAD~1
+          t=`git -C stachschema-models diff --name-only HEAD HEAD~1`
+          echo $t
           git -C stachschema-models log -1 --stat --oneline --no-decorate master
           sa=`git -C stachschema-models log -1 --stat --oneline --no-decorate master`
           echo $sa
