--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,8 +28,8 @@ jobs:
           ref: master
       - name: Check whether models were changed in last commit
         run: |
-          #t=`git -C stachschema-models diff --name-only HEAD HEAD~1`
-          #echo $t
+          t=$(git -C stachschema-models diff --name-only HEAD HEAD~1)
+          echo $t
           git -C stachschema-models log -1 --stat --oneline --no-decorate origin/master
           sa=`git -C stachschema-models log -1 --stat --oneline --no-decorate origin/master`
           echo $sa
