--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,7 +28,7 @@ jobs:
           fetch-depth: 0
       - name: Check whether models were changed in last commit
         run: |
-          count=`git -C stachschema-models log -1 --stat --oneline --no-decorate | grep -c .proto`
+          count=`git -C stachschema-models log -1 --stat --oneline --no-decorate | grep -c ".proto$"`
           echo $count
           if [ "$count" -eq "0" ]; then
             echo "No STACH models were updated"
