--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,7 +31,7 @@ jobs:
           git -C stachschema-models log -1 --name-only --oneline
           t=`git -C stachschema-models log -1 --stat --oneline --no-decorate`
           echo $t
-          count=`git -C stachschema-models log -1 --name-only --oneline"`
+          count=`git -C stachschema-models log -1 --name-only --oneline`
           echo $count
           if [ "$count" -eq "0" ]; then
             echo "No STACH models were updated"
