--- a/.github/workflows/update-stach-sdks.yml
+++ b/.github/workflows/update-stach-sdks.yml
@@ -67,3 +67,11 @@ jobs:
           export GITHUB_USER=${{ secrets.USER }}
           export GITHUB_TOKEN=${{ secrets.USER_API_KEY }}
           hub pull-request -m "feat(stachschema-sdks): Updating SDKs" -h $branch_name
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: artifacts
+          path: |
+            stachschema-sdks/java/target/
+            stachschema-sdks/python/fds.protobuf.stach/dist/
+            stachschema-sdks/dotnet/Schema/bin/Release/
