--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -54,15 +54,28 @@ jobs:
           path: stachschema-sdks
           token: ${{ secrets.USER_API_KEY }}
                    
-      - name: Updating SDKs code locally
+      - name: Cloning existing branch if yes
         if: env.STACH_CHANGES == 1
+        run: |
+          pr_number="${{ github.event.number }}"
+          branch_name="feat/stachschema-sdks/stachschema-pr-$pr_number"
+          remote_branch_check=$(git ls-remote --heads origin $branch_name)
+          if [ -z "$remote_branch_check" ]
+          then
+            echo "Does not exist"
+          else
+            echo "Already exists"
+          fi
+                   
+      - name: Updating SDKs code locally
+        if: env.STACH_CHANGES == 2
         run: |
           export STACH_MODELS_PATH=${PWD}/stachschema-models/proto
           export STACH_SDKS_REPO_PATH=${PWD}/stachschema-sdks
           docker-compose -f stachschema-sdks/docker-compose.generate.yml up
           
       - name: Raise pull request
-        if: env.STACH_CHANGES == 1
+        if: env.STACH_CHANGES == 2
         run: |
           cd stachschema-sdks
           git config user.email "${{ secrets.USER_EMAIL }}"
