--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -23,6 +23,7 @@ jobs:
           repository: saigiridhar21/stachschema-models
           path: stachschema-models
           fetch-depth: 0
+          ref: "${{ github.ref }}" 
           
       - name: Check branch
         run: |
