--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -23,7 +23,7 @@ jobs:
           repository: saigiridhar21/stachschema-models
           path: stachschema-models
           fetch-depth: 0
-          ref: "${{ github.ref }}" 
+          ref: "${{ github.head_ref }}" 
           
       - name: Check branch
         run: |
